deploy/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe-app
  template:
    metadata:
      labels:
        app: fe-app
    spec:
      containers:
        - name: fe-container
          image: cr.yandex/crpf0ksoueue60lg97jm/fe/fe:latest
