deploy/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  selector:
    app: be-app
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
      nodePort: 30082
