deploy/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: fe-app
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30081
